--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ variables:
   # imagePullSecret: acr-secret
   # imageRepository: prep-nursing
   # containerRegistry: prepxacr.azurecr.io
+  branch: $(Build.SourceBranch)
 
 stages:
 - stage: Build
@@ -23,5 +24,5 @@ stages:
           echo '-------'
           whoami
           curl ifconfig.me
-          imageTag=$(if eq '$(Build.SourceBranch)' 'refs/heads/main' 'prod' '$(Build.SourceBranchName)')
-          echo "Image Tag: $imageTag"
+          # imageTag=$(if eq '$(Build.SourceBranch)' 'refs/heads/main' 'prod' '$(Build.SourceBranchName)')
+          echo "Image Tag: $branch"
